--- a/FINANCE_PFE/talend.project
+++ b/FINANCE_PFE/talend.project
@@ -12,4 +12,6 @@
   <TalendProperties:User xmi:id="_hDONcUajEfCq1J4R0ZyIiw" login="asmamahsni@trial67888.us.talend.com" firstName="oumaima" lastName="debbich" type="DQ"/>
   <TalendProperties:User xmi:id="_CUpmEEwvEfC0Gddp0NEVww" login="hibaderouich796@trial68102.us.talend.com" firstName="oumaima" lastName="debbich" type="DQ"/>
   <TalendProperties:User xmi:id="_CUpmEUwvEfC0Gddp0NEVww" login="hibaderouich796@trial68102.us.talend.com" firstName="oumaima" lastName="debbich" type="DQ"/>
+  <TalendProperties:User xmi:id="_vbnCQFt-EfC85dUDf7-nzA" login="zeinebdebbich5@trial68339.us.talend.com" firstName="oumaima" lastName="debbich" type="DQ"/>
+  <TalendProperties:User xmi:id="_vbnCQVt-EfC85dUDf7-nzA" login="zeinebdebbich5@trial68339.us.talend.com" firstName="oumaima" lastName="debbich" type="DQ"/>
 </xmi:XMI>
